# idd-merge-idd

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  GEMINI.md  LICENSE  README.md  SECURITY.md  idd-merge-workspace.code-workspace  research_ai_autopilot_merge.md
.cargo/: audit.toml
.claude/agents/: lifecycle-porter.md  merge-analyst.md  merge-planner.md  merge-qa.md  rust-implementer.md
.claude/skills/idd-merge-loop/: SKILL.md
.claude/skills/idd-merge-loop/scripts/: ralph-idd.sh
.claude/skills/merge-orchestrator/: SKILL.md
.claude/skills/merge-verification/: SKILL.md
.claude/skills/merge-verification/scripts/: drift-check.sh
.claude/skills/pr-evidence-bundle/: SKILL.md
.claude/skills/repo-inventory/: SKILL.md
.claude/skills/rust-native-implementation/: SKILL.md
.claude/skills/session-relay/: SKILL.md
.claude/skills/vertical-slice-planning/: SKILL.md
.gemini/agents/: continuity-steward.md  merge-planner.md  merge-qa.md
.gemini/skills/idd-merge-loop/: SKILL.md
.gemini/skills/idd-merge-loop/references/: loop-state-template.md
.gemini/skills/idd-merge-loop/scripts/: ralph-idd.sh
.gemini/skills/lifecycle-porting/: SKILL.md
.gemini/skills/merge-orchestrator/: SKILL.md
.gemini/skills/merge-verification/: SKILL.md
.gemini/skills/merge-verification/scripts/: drift-check.sh
.gemini/skills/pr-evidence-bundle/: SKILL.md
.gemini/skills/repo-inventory/: SKILL.md
.gemini/skills/session-relay/: SKILL.md
.github/: copilot-instructions.md  pull_request_template.md  pull_request_template.md.idd-bak-1
.github/ISSUE_TEMPLATE/: idd-task.yml
.github/workflows/: ci.yml  gemini-loop.yml  idd-ci.yml  idd-ci.yml.idd-bak-1  promote-verify.yml
.handoff/context/: capsule.json
.idd/: LOCK.md  MANIFEST.tsv  MANIFEST.tsv.idd-bak-1  MANIFEST.tsv.idd-bak-2  MANIFEST.tsv.idd-bak-3
AI_MERGE/: 03_env_and_secret_contracts.md  04_merge_plan.md  08_agent_queue.md  10_parity_test_plan.md  11_integration_research_audit_roadmap.md  validation_report.md  validation_report.md.idd-bak-1  validation_report.md.idd-bak-2  validation_report.md.idd-bak-3
_workspace/: .gitignore  HANDOFF.md  backlog.md  loop_state.md
adr/: 0001-unified-flat-cli.md  0002-tui-in-v1.md  0003-authoritative-control-plane.md
crates/cli/: Cargo.toml
crates/cli/src/: lib.rs  main.rs
crates/cli/src/commands/: core.rs  mod.rs  run.rs  spec.rs  spec_adr.rs  spec_archive.rs  spec_scaffold.rs  spec_status.rs  tui.rs
crates/cli/tests/: archive_cli.rs  run_cli.rs  spec_adr_cli.rs  spec_cli.rs  spec_scaffold_cli.rs  spec_status_cli.rs
crates/core/: Cargo.toml  README.md
crates/core/docs/: AGENT_WORKFLOW.md
crates/core/docs/audits/: GAP_AUDIT_v2.md
crates/core/examples/: README.md
crates/core/scripts/: package.sh
crates/core/src/: cli.rs  env_contract.rs  fs_utils.rs  main.rs  manifest.rs  planner.rs  scanner.rs  templates.rs  validation.rs
crates/core/tests/: smoke.rs
crates/runner/: Cargo.toml
crates/runner/src/: config.rs  data.rs  lib.rs  runner.rs
crates/spec/: Cargo.toml
crates/spec/src/: lib.rs
crates/spec/src/adr/: mod.rs
crates/spec/src/archive/: mod.rs
crates/spec/src/model/: block.rs  delta.rs  merge.rs  mod.rs  requirement.rs  spec.rs
crates/spec/src/parse/: common.rs  delta_parser.rs  emit.rs  mod.rs  spec_parser.rs
crates/spec/src/scaffold/: mod.rs
crates/spec/src/schema/: graph.rs  mod.rs
crates/spec/src/validate/: mod.rs  report.rs  rules.rs
crates/spec/tests/: archive_direct.rs  archive_golden.rs  parse_emit_direct.rs  validate_golden.rs
crates/tui/: Cargo.toml  README.md  flake.nix
crates/tui/src/: app.rs  config.rs  data.rs  lib.rs  main.rs  ui.rs
docs/rusty-idd/: architecture-diagrams.md  dependency-duplication.md  design.md  lifecycle-contract.md  parity-matrix.md  proposal.md  security-advisories.md  slice-sequence.md  spec-engine-design.md
docs/rusty-idd/oracle-fixtures/: 01-base-spec.md  02-delta-spec.md  03-archived-result.md  04-validate-spec.json  05-validate-no-scenario.json  06-rename-modify-base.md  07-rename-modify-delta.md  README.md
intent-driven-development/: .gitignore  Cargo.toml  LICENSE  README.md
intent-driven-development/.github/workflows/: ci.yml
intent-driven-development/docs/: ARCHITECTURE.md
intent-driven-development/scripts/: package.sh
intent-driven-development/src/: fs_utils.rs  lib.rs  model.rs  scanner.rs  validation.rs
intent-driven-development/tests/: smoke.rs
openspec/changes/change-1/specs/cap-1/: spec.md
openspec/changes/test-task-hdr/: design.md  proposal.md  tasks.md
openspec/changes/test-task-hdr/specs/config-retry/: spec.md
openspec/specs/: base.md
scripts/: oracle-sync.sh
