# rusty-idd — Cargo workspace.
#
# Members under crates/:
#   crates/core    — the std-only, zero-dependency idd crate (was intent-driven-development)
#   crates/runner  — the non-UI execution layer (runner/config/data, split out of the tui)
#   crates/tui     — the ratatui OpenSpec TUI (lib + bin); depends on crates/runner
#   crates/spec    — the ported OpenSpec lifecycle engine (parse / merge / validate)
#   crates/cli     — the unified `rusty-idd` clap binary wiring the crates together
#
# resolver = "3" is required because members mix editions (core 2021 + tui/runner 2024);
# the virtual root has no package.edition to infer it from, so it is set explicitly.

[workspace.package]
version   = "0.1.0"
authors   = ["FlexNetOS contributors"]
repository = "https://github.com/FlexNetOS/rusty-idd"
homepage   = "https://github.com/FlexNetOS/rusty-idd"
documentation = "https://docs.rs/rusty-idd-cli"
license  = "MIT"
edition  = "2021"
rust-version = "1.88"

[workspace]
resolver = "3"
members = [
    "crates/cli",
    "crates/core",
    "crates/runner",
    "crates/spec",
    "crates/tui",
]
