[package]
name = "rusty-idd-runner"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Task-execution engine and OpenSpec data layer for the rusty-idd TUI and CLI"

[lib]
name = "rusty_idd_runner"
path = "src/lib.rs"

[dependencies]
chrono = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Maintained serde_yaml fork (mdBook/Norway ecosystem). Replaces the archived
# serde_yaml 0.9 (RUSTSEC: unmaintained). API-compatible drop-in. NOT serde_yml
# (RUSTSEC-2025-0068, unsound). Matches the spec-engine design's YAML choice.
serde_norway = "0.9"

[dev-dependencies]
tempfile = "3"
