[package]
name = "openspec-tui"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "A terminal UI for browsing and implementing OpenSpec changes"
repository = "https://github.com/neosam/openspec-tui"

[dependencies]
# The UI layer. The execution layer (runner/config/data) and its serde/chrono
# deps moved to the openspec-runner crate.
ratatui = "0.30"
crossterm = "0.29"
tui-markdown = { version = "0.3.7", features = ["highlight-code"] }
tempfile = "3"                                    # used by main.rs (non-test) + tests
openspec-runner = { path = "../runner" }

[dev-dependencies]
